--- a/resources/UIFiles/home.ui
+++ b/resources/UIFiles/home.ui
@@ -26,7 +26,6 @@
     <string notr="true">QWidget#Shadow{
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 			rgba(85, 98, 112, 255), stop:1 rgba(255, 107, 107, 255));
 color: rgb(220, 220, 220);
-border-radius:10px;
 }</string>
    </property>
    <widget class="QLabel" name="swords">
@@ -70,7 +69,7 @@ padding-left: 20px;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="startButton">
+   <widget class="QPushButton" name="exitButton">
     <property name="geometry">
      <rect>
       <x>400</x>
@@ -96,7 +95,7 @@ QPushButton#login:hover{
 }</string>
     </property>
     <property name="text">
-     <string>Start Bot</string>
+     <string>Close all Bot Processes</string>
     </property>
    </widget>
   </widget>
